--- a/views/movies-details.ejs
+++ b/views/movies-details.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>expressemovies</title>
+    <title>expresse movies</title>
     <link rel="stylesheet" href="../public/style.css"/>
 </head>
 <body>
-    <h1>films et series par genre</h1>
+    <h1> Details de <%= movietitle %>  </h1>
     <div>
-        SF, dramatique, animation, aventure, triller.....
+        <%= movieid %>
     </div>
         
 </body>
