--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="../public/style.css"/>
 </head>
 <body>
+    <%- include('./partials/header') %>
+
     <h1>expressemovies : les sites cinéphile</h1>
+
     <div>
         Etes vous plutot films ou series? peut importe, vous trouvez votre bonheur dans les deux cas  
     </div>
+
+    <% include('./partials/footer') %>
+
 </body>
 </html>
