--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="../public/style.css"/>
 </head>
 <body>
+    <%- include('./partials/header') %>
+
     <h1>Film culte</h1>
+
     <div>
        aze aze aze aze
     </div>
+
+    <% include('./partials/footer') %>
+
 </body>
 </html>
