--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -7,15 +7,20 @@
     <link rel="stylesheet" href="../public/style.css"/>
 </head>
 <body>
-    <%- include('./partials/header') %>
+<div class="central">
+    <%- include ('./partials/header') %>
 
-    <h1>Film culte</h1>
+    <h1><%= title %></h1>
 
     <div>
-       aze aze aze aze
+       <% for(movie of movies) { %>
+       <div> <%= movie.title %> (<%= movie.years %>) </div>
+       <% } %>
     </div>
+    
+</div>
 
-    <% include('./partials/footer') %>
+<% include('./partials/footer') %>
 
 </body>
 </html>
