--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,10 @@
 <div>
     <div>
 
-   <a href="/">express movies</a> 
+   <a href="./">express movies</a> 
    &nbsp;
    <a href="/movies">Films</a> 
-   &nbsp;
-   <a href="/movies/formulaire">contact</a>
+   
 
     </div>
 </div>
