--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         Etes vous plutot films ou series? peut importe, vous trouvez votre bonheur dans les deux cas  
     </div>
 
-    <% include('./partials/footer') %>
+    <%- include('./partials/footer') %>
 
 </body>
 </html>
