--- a/views/movies-details.ejs
+++ b/views/movies-details.ejs
@@ -15,7 +15,7 @@
         <%= movieid %>
     </div>
 
-    <% include('./partials/footer') %>
+    <%- include('./partials/footer') %>
 
 </body>
 </html>
