--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -17,10 +17,19 @@
        <div> <%= movie.title %> (<%= movie.years %>) </div>
        <% } %>
     </div>
-    
+    <br>
+    <div>
+        <form action="/movies" methode="post">
+            <label for="movietiltle">titre du film</label>
+            <input type="text" name="movietitle" id="movietitle">
+            <label for="movieyear">année du film</label>
+            <input type="text" name="movieyear" id="movieyear">
+           <button type="submit">ajouter</button>
+        </form>
+    </div>
 </div>
 
-<% include('./partials/footer') %>
+<%-include('./partials/footer') %>
 
 </body>
 </html>
