--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -19,14 +19,15 @@
     </div>
     <br>
     <div>
-        <form action="/movies" methode="post">
-            <label for="movietiltle">titre du film</label>
+        <form action="/movies" method="post">
+            <label for="movietitle">Titre du film</label>
             <input type="text" name="movietitle" id="movietitle">
-            <label for="movieyear">année du film</label>
+            <label for="movieyear">Année du film</label>
             <input type="text" name="movieyear" id="movieyear">
-           <button type="submit">ajouter</button>
+            <button type="submit">Ajouter</button>
         </form>
     </div>
+    
 </div>
 
 <%-include('./partials/footer') %>
