--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -32,5 +32,25 @@
 
 <%-include('./partials/footer') %>
 
+<script>
+    const form = document.querySelector('form');
+    form.addEventListener('submit', addMovie);
+
+    function addMovie (event){
+        event.preventDefault;
+        if(fetch){
+            fetch('/movies',{
+            method : 'post',
+            body: new FormData('form')
+        })
+        .then(checkstatus)
+        .catch(function(error){
+            console.error('request failed', error);
+        })
+        }
+
+    }
+
+</script>
 </body>
 </html>
