--- a/views/movies.ejs
+++ b/views/movies.ejs
@@ -48,8 +48,21 @@
             console.error('request failed', error);
         })
         }
+        else{
+            //jQuery, XHR
+        }
+}
+function checkstatus(response) {
+    if(response.status >= 200 && response.status < 300){
+       let newMovieDiv = doccument.creatElement('div');
+       const movietitle = docuument.getElementById(movietitle).value;
+       const movieyear = doccument.getElementById(movieyear).value;
+       //newMovieDiv.innerHTML = `${movietitle} (${movieyear})`;
+       newMovieDiv.innerHTML = movietitle +' '+'('+movieyear+')';
+       
 
     }
+}
 
 </script>
 </body>
